Fix mobile chrome adress bar making 100vh too big

--- a/src/containers/Education.scss
+++ b/src/containers/Education.scss
@@ -1,11 +1,12 @@
 @import "../variables.scss";
 
 .Education {
+  height: 100vh;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 100vh;
   position: relative;
 
   .Title {
@@ -81,22 +82,26 @@
   bottom: 24px;
   left: 0;
   margin: auto;
-  transition: all 0.2s ease;
-  opacity: 0.6;
+  text-align: center;
 
-  padding: 0;
-  border: none;
-  background: none;
-  outline: 0;
-  cursor: pointer;
+  button {
+    padding: 0;
+    margin: 0;
+    border: none;
+    background: none;
+    outline: 0;
+    cursor: pointer;
+    opacity: 0.75;
+    transition: all 0.2s ease;
 
-  &:hover {
-    transform: scale(1.25);
-    opacity: 1;
-  }
+    &:hover {
+      transform: scale(1.25);
+      opacity: 1;
+    }
 
-  path {
-    fill: $textColor;
+    path {
+      fill: $textColor;
+    }
   }
 }
 
@@ -113,6 +118,15 @@
   .ScrollToTopIcon {
     path {
       fill: $textColorLight;
+    }
+  }
+}
+
+@supports (-webkit-appearance: none) {
+  html.os-android {
+    .Education {
+      height: calc(100vh - 56px);
+      min-height: calc(100vh - 56px);
     }
   }
 }
